解决因为项目在打包为 .asar 包文件之后通过 node-ffi 调用系统API时无法读取包内静态文件，所以在打包时需要将相关文件排除在包外的问题。

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "win": {
       "target": "zip",
       "icon": "assets/logo.ico"
-    }
+    },
+    "asarUnpack": "./assets/cursor/*"
   }
 }
